# artemis

./: .editorconfig  .gitignore  .uncrustify.cfg  .valalintignore  AGENTS.md  FORMATTING.md  README.md  TODO  check-format.sh  com.k0vcz.Artemis.json  com.k0vcz.artemis.json  format.sh  meson.build  metadata  vala-lint.conf
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build.yml  release.yml
blueprints/: add_spot_page.blp  band_view.blp  main_window.blp  map_window.blp  meson.build  park_log_dialog.blp  preferences.blp  spot_card.blp  spot_history_dialog.blp  spot_page.blp
data/: artemis-vala.gresource.xml  com.k0vcz.Artemis.desktop.in  com.k0vcz.Artemis.gschema.xml  com.k0vcz.Artemis.metainfo.xml.in  com.k0vcz.Artemis.service.in  com.k0vcz.artemis.desktop.in  com.k0vcz.artemis.gschema.xml  com.k0vcz.artemis.metainfo.xml.in  com.k0vcz.artemis.service.in  meson.build
data/css/: style.css
data/icons/: meson.build
data/icons/windows/: app.rc
data/map/: style.json  style_cleaned.json
data/sql/: version-001.sql
packaging/appimage/: AppImageBuilder.yml
po/: POTFILES.in  meson.build
scripts/: artemis-installer.nsi  artemis.wxs  build-windows-bundle.sh  build-windows-installer.sh  release-appimage.sh  release-flatpak.sh
sql/: meson.build
src/: RadioControl.vapi  activator.vala  application.vala  band_view.vala  build.vala.in  database.vala  main.vala  map_view.vala  map_window.vala  meson.build  pota_client.vala  preferences.vala  radio_control.c  radio_control.h  repo.vala  spot.vala  spot_card.vala  status_page.vala  utils.vala  window.vala  windows_serial.c
subprojects/: blueprint-compiler.wrap
